@@ -1,8 +1,48 @@
-MD5 31098bcf3c1253de28558ae374d214c0 ChangeLog 1579
-MD5 98979dcc8f89c84051f9957afd8d481a info2html-1.4.ebuild 947
-MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
-MD5 9293d5fd1d3733b63e98932b84ce3f8e info2html-1.4-r1.ebuild 989
-MD5 4b9f64ddf8e7ef3c725fc1f785c69456 files/digest-info2html-1.4 60
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX info2html-gentoo.patch 1767 RMD160 7749dc4b369529c75819a5f86b7078dbc98a7d12 SHA1 e92586c0be1669b41bf42c36be764abb888236b4 SHA256 1ba2a50da128deadc59d5d2604ab9b0a9c49b4f6970c5ba965e0fdd8c214e80d
 MD5 495fd408850958212ae70b35f3b8129b files/info2html-gentoo.patch 1767
-MD5 4b9f64ddf8e7ef3c725fc1f785c69456 files/digest-info2html-1.4-r1 60
+RMD160 7749dc4b369529c75819a5f86b7078dbc98a7d12 files/info2html-gentoo.patch 1767
+SHA256 1ba2a50da128deadc59d5d2604ab9b0a9c49b4f6970c5ba965e0fdd8c214e80d files/info2html-gentoo.patch 1767
+AUX info2html-xss.patch 1730 RMD160 69961064f85b8eab600f943bbb32f5da286090e8 SHA1 ec360cb13ad423e7b1ad6b1545b92c5d43b00ea0 SHA256 c0cbc74bd7fc25f587050aaa42fb04eb9ff3dfb6c39853b4c11f07484396213a
 MD5 cc6a82ee8361bbdc4e94d4f39feb5896 files/info2html-xss.patch 1730
+RMD160 69961064f85b8eab600f943bbb32f5da286090e8 files/info2html-xss.patch 1730
+SHA256 c0cbc74bd7fc25f587050aaa42fb04eb9ff3dfb6c39853b4c11f07484396213a files/info2html-xss.patch 1730
+DIST info2html-1.4.tgz 8473 RMD160 04ce32dc6c6de843463eabfafe9007606ad584ce SHA1 58e901863f344a757fbc7a0ab5445ed6404db47f SHA256 b93bc7d1e11aaa287cf01ae32ab089ea347aa26d1973fab52a146c977096d56f
+EBUILD info2html-1.4-r1.ebuild 989 RMD160 84c3efe1f2aaba25fc46bcb63148a888679268ae SHA1 04e2077d94b480a506ab0e54ca2c4a19aacd23e5 SHA256 3363f971585a43b208604450a459cc3484a502824089199fb76cb4c59d8a6ce6
+MD5 9293d5fd1d3733b63e98932b84ce3f8e info2html-1.4-r1.ebuild 989
+RMD160 84c3efe1f2aaba25fc46bcb63148a888679268ae info2html-1.4-r1.ebuild 989
+SHA256 3363f971585a43b208604450a459cc3484a502824089199fb76cb4c59d8a6ce6 info2html-1.4-r1.ebuild 989
+EBUILD info2html-1.4-r2.ebuild 816 RMD160 29ade6151aad9562eded956e4d38bfe13565cee6 SHA1 d4b1dbcebfd3421c2a5dea7f81fda6371b2bf844 SHA256 d2accc81d338e9160b75a289a2b865c7dad8f966978ce2bf1eb68a10a8ad89b1
+MD5 78ebcfb8023c856f3eff6991076501e7 info2html-1.4-r2.ebuild 816
+RMD160 29ade6151aad9562eded956e4d38bfe13565cee6 info2html-1.4-r2.ebuild 816
+SHA256 d2accc81d338e9160b75a289a2b865c7dad8f966978ce2bf1eb68a10a8ad89b1 info2html-1.4-r2.ebuild 816
+EBUILD info2html-1.4.ebuild 947 RMD160 47f9d53be6073d330e007e0be3b605aaaacfa829 SHA1 bd4c9c328a429532299f676ae6f437b8e01d3914 SHA256 76cccc16d9a94957e0cb275f8b95f192712645af73374cb06ad9af27ac9364f6
+MD5 98979dcc8f89c84051f9957afd8d481a info2html-1.4.ebuild 947
+RMD160 47f9d53be6073d330e007e0be3b605aaaacfa829 info2html-1.4.ebuild 947
+SHA256 76cccc16d9a94957e0cb275f8b95f192712645af73374cb06ad9af27ac9364f6 info2html-1.4.ebuild 947
+MISC ChangeLog 1797 RMD160 757c641804a8330c6c6327abf281ca3311934f6d SHA1 74bbf264a87a22debe80e1d63a2c0ee240641e3d SHA256 065a3951c791d5b6e23878e08686e7c956351657dcfc90b10342d3c79914ece6
+MD5 4f1391dc58de75db2f7436b338ce8588 ChangeLog 1797
+RMD160 757c641804a8330c6c6327abf281ca3311934f6d ChangeLog 1797
+SHA256 065a3951c791d5b6e23878e08686e7c956351657dcfc90b10342d3c79914ece6 ChangeLog 1797
+MISC metadata.xml 255 RMD160 4a21934460d561dd09c2a89906bf2d5e6b115fcb SHA1 f6d4efe219bcf2b807183c63e4d441932df3f7a3 SHA256 6142e613e113e9f45f44a77e3a2501487ec9aaf672ae51bff3f47a0821733cdb
+MD5 9d3b5da8e5d2162275c8675b7263f8e4 metadata.xml 255
+RMD160 4a21934460d561dd09c2a89906bf2d5e6b115fcb metadata.xml 255
+SHA256 6142e613e113e9f45f44a77e3a2501487ec9aaf672ae51bff3f47a0821733cdb metadata.xml 255
+MD5 34c4959aa165b3189fecc9bed1fa34d1 files/digest-info2html-1.4 226
+RMD160 10637315384245efd620c9216264dc190d4099ab files/digest-info2html-1.4 226
+SHA256 fa40c2bf18435194c3c17f54580d9a47f832f8f26ca09654b9f2fb2164f49054 files/digest-info2html-1.4 226
+MD5 34c4959aa165b3189fecc9bed1fa34d1 files/digest-info2html-1.4-r1 226
+RMD160 10637315384245efd620c9216264dc190d4099ab files/digest-info2html-1.4-r1 226
+SHA256 fa40c2bf18435194c3c17f54580d9a47f832f8f26ca09654b9f2fb2164f49054 files/digest-info2html-1.4-r1 226
+MD5 34c4959aa165b3189fecc9bed1fa34d1 files/digest-info2html-1.4-r2 226
+RMD160 10637315384245efd620c9216264dc190d4099ab files/digest-info2html-1.4-r2 226
+SHA256 fa40c2bf18435194c3c17f54580d9a47f832f8f26ca09654b9f2fb2164f49054 files/digest-info2html-1.4-r2 226
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFE+BNrZfNLSOUrp0sRAjW/AJ9gyCmNsrfYrxLXXRXqQtglrjqSSACgp5J6
+idCBaeBva2TapaXibA2dJNk=
+=BJCR
+-----END PGP SIGNATURE-----
