@@ -1,1 +1,3 @@
 MD5 bccc18eeb48bb2571e5c66dec8822770 info2html-1.4.tgz 8473
+RMD160 04ce32dc6c6de843463eabfafe9007606ad584ce info2html-1.4.tgz 8473
+SHA256 b93bc7d1e11aaa287cf01ae32ab089ea347aa26d1973fab52a146c977096d56f info2html-1.4.tgz 8473
