@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
+<herd>web-apps</herd>
 <maintainer>
-  <email>twp@gentoo.org</email>
-  <name>Tom Payne</name>
+  <email>kevquinn@gentoo.org</email>
+  <name>Kevin F. Quinn</name>
 </maintainer>
 </pkgmetadata>
