@@ -1,6 +1,13 @@
 # ChangeLog for app-text/info2html
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/info2html/ChangeLog,v 1.13 2005/05/20 21:47:00 blubb Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/info2html/ChangeLog,v 1.14 2006/09/01 11:02:44 kevquinn Exp $
+
+*info2html-1.4-r2 (01 Sep 2006)
+
+  01 Sep 2006; Kevin F. Quinn <kevquinn@gentoo.org> metadata.xml,
+  +info2html-1.4-r2.ebuild:
+  Take ownership, and rework to use webapp.eclass; bug #53004.  Add to web-app
+  herd.
 
   20 May 2005; Bryan Østergaard <kloeri@gentoo.org>
   info2html-1.4-r1.ebuild:
